tests/en-cpp-reference-c/failing/x86_msvc/cCode20.c
/* Cake x86_msvc */

int __cdecl puts(char * _Buffer);

int main(void)
{
    puts("World");
    puts("Hello, again");
}


